--- a/DockerBuildContainers/Ubuntu2204-RegressionTests/Dockerfile
+++ b/DockerBuildContainers/Ubuntu2204-RegressionTests/Dockerfile
@@ -29,6 +29,7 @@ RUN apt-get -qq install -y g++-11-arm-linux-gnueabihf g++-12-arm-linux-gnueabihf
 
 ## GCC 13 or later is required to support std::format, and no obvious way to get this on Ubuntu 22.04 using apt-get etc
 ## (EVEN WITH ppa:ubuntu-toolchain-r/ppa) --LGP 2024-03-07
+## Still not ACTUALLY NEEDED, HOWEVER, since Stroika will pull in fmtlib instead if needed (for older gcc) --LGP 2024-07-08 
 ADD ./Ubuntu2204-RegressionTests/BuildGCC .
 RUN CLEANUP=1 GCC_VERSION=13.3.0 ./BuildGCC; \
     (cd /usr/local/bin ; ln -s g++ g++-13; ln -s gcc gcc-13; ln -s `which gcc-ranlib-12` gcc-ranlib-13; ln -s `which gcc-ar-12` gcc-ar-13; ); \
